# data-analystic

./: .gitignore  app.py  pyproject.toml
src/: main.py
src/core/: __init__.py  data.py  script.py
src/core/script/: __init__.py  commands.py  engine.py  processes.py
src/routes/: data_script.py  home.py
src/static/css/: landingpage.css
src/templates/: landingpage.html
tests/: test_data.py  test_engine.py  test_processes.py  test_route_data_script.py
