[tool.poetry]
name = "data-analystic"
version = "0.1.0"
description = ""
authors = ["Paulo Chaves <paulochz01@gmail.com>"]
readme = "README.md"
packages = [
    {include = "src"},
]


[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


